[package]
name = "kube-virsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.51"
tokio-util = "0.6.9"
futures = "0.3.19"
clap = "2.34.0"
tokio = { version = "1.14.0", features = ["full"] }
kube = { version = "0.65.0", features = ["runtime","derive","ws"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
